[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

# ---------------------------------------------------------------------------
# Project metadata (replaces setup.py)
# ---------------------------------------------------------------------------

[project]
name = "permyt"
dynamic = ["version"]
description = "User-controlled authorization protocol for service-to-service data access"
readme = "README.md"
license = "MIT"
license-files = ["LICENSE"]
requires-python = ">=3.10"
authors = [
    { name = "Leopard Labs Ltd", email = "support@permyt.io" },
]
keywords = [
    "permyt",
    "authorization",
    "ai-agents",
    "workflows",
    "automation",
    "oauth",
    "privacy",
    "jwt",
    "api-client",
    "security",
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: Security",
    "Topic :: Internet :: WWW/HTTP",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Operating System :: OS Independent",
    "Typing :: Typed",
]
dependencies = [
    "requests>=2.31.0",
    "joserfc>=1.0.0",
    "cryptography>=41.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4.0",
    "pytest-cov>=4.1.0",
    "ruff>=0.6.0",
    "mypy>=1.5.0",
    "types-requests>=2.31.0",
]

[project.urls]
Homepage = "https://github.com/LeopardLabsAi/permyt-api-python"
"Bug Tracker" = "https://github.com/LeopardLabsAi/permyt-api-python/issues"
Documentation = "https://docs.permyt.io"
"Source Code" = "https://github.com/LeopardLabsAi/permyt-api-python"

# ---------------------------------------------------------------------------
# Setuptools (replaces setup.cfg [options])
# ---------------------------------------------------------------------------

[tool.setuptools.dynamic]
version = { attr = "permyt.__version__" }

[tool.setuptools.packages.find]
exclude = ["tests*", "examples*", "docs*"]

[tool.setuptools]
zip-safe = false
include-package-data = true

# ---------------------------------------------------------------------------
# Ruff (lint + format)
# ---------------------------------------------------------------------------

[tool.ruff]
line-length = 100
target-version = "py310"
extend-exclude = [".history", "env", ".venv", "build", "dist"]

[tool.ruff.lint]
select = ["E", "F", "W", "I", "N", "UP", "B", "C4", "S", "PT", "RET", "SIM", "TID", "PL"]
ignore = [
    "S101",      # assert is fine in tests
    "PLR0913",   # too many args — common in protocol/SDK signatures
    "PLR0915",   # too many statements
    "PLR0912",   # too many branches
    "PLR2004",   # magic-value-comparison
    "PLC0415",   # late imports — used to break circular deps in mixins
    "RET504",    # unnecessary assignment before return is a readability call
    "RET503",    # explicit None return from conditionals is a style call
    "TID252",    # relative imports are the SDK convention inside the package
]

[tool.ruff.lint.per-file-ignores]
"tests/**" = ["S", "PLR", "PT011", "PT006"]
"conftest.py" = ["S"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
line-ending = "lf"

# ---------------------------------------------------------------------------
# Mypy (replaces setup.cfg [mypy])
# ---------------------------------------------------------------------------

[tool.mypy]
python_version = "3.10"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = false
ignore_missing_imports = true

# Mixin classes reference methods/attributes from sibling mixins that are
# only combined at the PermytClient level.
[[tool.mypy.overrides]]
module = "permyt.mixins.*"
disable_error_code = ["attr-defined", "no-any-return"]

# ---------------------------------------------------------------------------
# Pytest (replaces setup.cfg [tool:pytest])
# ---------------------------------------------------------------------------

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = "test_*.py"
python_classes = "Test*"
python_functions = "test_*"
markers = ["code: tests that check code quality (ruff)"]
addopts = [
    "--verbose",
    "--strict-markers",
    "--cov=permyt",
    "--cov-report=term-missing",
    "--cov-report=html",
]

# ---------------------------------------------------------------------------
# Coverage (replaces setup.cfg [coverage:*])
# ---------------------------------------------------------------------------

[tool.coverage.run]
source = ["permyt"]
omit = ["*/tests/*", "*/test_*.py"]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "raise AssertionError",
    "raise NotImplementedError",
    "if __name__ == .__main__.:",
    "if TYPE_CHECKING:",
    "@abstractmethod",
]
